--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
       background: black; background-size: cover;
       height: 100%;
     }
-    h1, h2 { font-size: 3rem; font-weight: 600; color: white; }
+    h1, h2 { font-size: 50px; font-weight: 600; color: white; }
     .title { text-align: center; margin-bottom: 20px; }
     #formWrapper {
       background: rgba(0, 0, 0, 0.2);
