--- a/login.html
+++ b/login.html
@@ -15,8 +15,8 @@
       background: black; background-size: cover;
       height: 100%;
     }
-    h1, h2 { font-size: 50px; font-weight: 600; color: white; }
-    .title { text-align: center; margin-bottom: 20px; }
+    h1, h2 { font-weight: 600; color: white; }
+    .title { font-size: 40px; text-align: center; margin-bottom: 20px; }
     #formWrapper {
       background: rgba(0, 0, 0, 0.2);
       width: 100%; height: 100%;
