--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
       margin-bottom: 2vh;
     }
     #form {
-      width: 360px; padding: 20px;
+      width: 100%; padding: 20px;
       background-color: black;
       border-radius: 10px;
     }
